examples/gateway-api/manifests/standard/http-route-attachment/gateway-namespaces.yaml
#$ Used in:
#$ - site-src/concepts/api-overview.md
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: gateway-api-example-ns1
spec:
  gatewayClassName: foo-lb
  listeners:
  - name: prod-web
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            expose-apps: "true"
---
# Following are resources not explicitely declared
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: foo-lb
  namespace: gateway-api-example-ns1
